stable/spoolman/0.0.2/templates/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
  labels:
    app.kubernetes.io/name: spoolman
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: spoolman
  template:
    metadata:
      name: spoolman
      labels:
        app.kubernetes.io/name: spoolman
    spec:
      containers:
        - name: spoolman
          # https://github.com/Donkie/Spoolman/pkgs/container/spoolman
          image: ghcr.io/donkie/spoolman:0.16.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /home/app/.local/share/spoolman
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
      volumes:
        - name: data
          hostPath:
            path: /mnt/pool/service/spoolman

---
apiVersion: v1
kind: Service
metadata:
  name: spoolman
spec:
  #ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: spoolman
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spoolman
spec:
  rules:
    - host: spoolman.bitheap.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spoolman
                port:
                  name: http
